2006-01-16 Paul Jakma <paul.jakma@sun.com>

	* bgp_aspath.c: (assegment_append_asns) XREALLOC can return
	  NULL theoretically, take care not to lose the allocated data.
	  (aspath_hash_alloc) aspath_dup already set the aspath
	  string - fix leak.
	  (aspath_parse) aspath_hash_alloc dupes the entire aspath,
	  including segments, but we forgot to free the temporary
	  assegment.
	  (aspath_snmp_pathseg) move the static stream pointer out to
	  file scope, so it can be freed.
	  (aspath_finish) new function, free aspath resources.
	* bgp_aspath.h: (aspath_finish) export.

2006-01-10 Juris Kalnins <juris@mt.lv>

	* bgpd.h: (bgp_router_id_unset) ex-function, remove.
	
2005-11-23 Paul Jakma <paul.jakma@sun.com>

	* bgp_aspath.c: (assegments_parse) should be static

2005-11-23 Juergen Kammer <j.kammer@eurodata.de>

	* bgp_aspath.c: (aspath_cmp_left_confed) fix SEGV for case
	  where one or both paths are empty.

2005-11-14 Paul Jakma <paul.jakma@sun.com>

	* bgp_route.c: (bgp_process_rsclient) convert to new workqueue
          specs and shut up gcc, which complains about cast from void
          via function parameters, for some dumb reason. Do the cast
          inside the function instead.
          (bgp_process_main,bgp_processq_del) ditto.
          (bgp_clear_route_node) ditto.
          (bgp_clear_node_queue_del) ditto.

2005-11-03 Paul Jakma <paul.jakma@sun.com>

	* bgp_damp.c: (bgp_reuse_timer) struct bgp can be retrieved via
	  the struct bgp_damp_info, no need to guess by using
	  bgp_get_default().

2005-10-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_vty.c: (bgp_config_write_redistribute) Use new library function
	  zebra_route_string instead of a local hard-coded table.

2005-09-30 Vincent Jardin <vincent.jardin@6wind.com>

	* bgp_packet.c: fix compilation when DEBUG is used.

2005-09-10 Paul Jakma <paul.jakma@sun.com>

	* Makefile.am: bgpd shouldn't list libgp's sources as its own.
	  Use LDADD.
	* bgp_aspath.h:	