@@ -1,3 +1,9 @@
+2006-01-17 Paul Jakma <paul.jakma@sun.com>
+
+	* bgp_nexthop.c: (zlookup_read*) convert to new Zserv format.
+	  (zlookup_query_ipv6) ditto.
+	  (bgp_import_check) ditto.
+	  
 2006-01-16 Paul Jakma <paul.jakma@sun.com>
 
 	* bgp_aspath.c: (assegment_append_asns) XREALLOC can return
